@@ -14,9 +14,7 @@
 
 %		foreach my $name (DateTime::TimeZone->names_in_category($category)) { 
 
-			<option value="<% $category."/".$name %>" <% ($category."/".$name) eq $tz ? "selected" : "" %> >
-				<% $name %>
-			</option>
+			<option value="<% $category."/".$name %>" <% ($category."/".$name) eq $tz ? "selected" : "" %> > <% $name %> </option>
 
 %		}
 
