@@ -93,7 +93,7 @@
 					<% $panel->letter %> 
 				</td>
 				
-				<td class="smallish">
+				<td class="smaller <% $panel->room->id ? "" : "red centeralign padno" %>">
 %					unless ($entry_only) { 
 					<a class="white block" href="panel_view.mhtml?panel_id=<% $panel->id %>">
 %					}
@@ -115,6 +115,11 @@
 						</a>
 						<br />
 % 					} 
+%					unless (@panel_judges) { 
+						<a class="red nowrap centeralign block" href="panel_view.mhtml?panel_id=<% $panel->id %>">
+							None
+						</a>
+%					}
 				</td>
 
 %				my @panel_entries = @{$entries_by_panel{$panel->id}} if $entries_by_panel{$panel->id};
