@@ -55,7 +55,7 @@
 				</td>
 
 				<td class="rightalign" colspan="2">
-					<select name="state" class="fixedmed">
+					<select name="state" class="fixedmed chosen">
 						<option value="">None</option>
 						<& /funclib/state_select.mas, state => $circuit ? $circuit->state : "" &>
 					</select>
@@ -69,7 +69,7 @@
 				</td>
 
 				<td class="rightalign" colspan="2">
-					<select name="country" class="fixedmed">
+					<select name="country" class="fixedmed chosen">
 						<option value="">None</option>
 						<& /funclib/country_select.mas, country => $circuit ? $circuit->country : "" &>
 					</select>
@@ -90,8 +90,8 @@
 					Timezone:
 				</td>
 				<td class="rightalign" colspan="2">
-					<select name="timezone">
-					<& "/funclib/timezones.mas", tz => $tz &>
+					<select name="timezone" class="chosen fixedmed">
+						<& "/funclib/timezones.mas", tz => $tz &>
 					</select>
 				</td>
 			</tr>
@@ -148,6 +148,31 @@
 				</td>
 			</tr>
 
+			<tr class="<% ($switch++ % 2) ? "oddrow" : "evenrow" %>">
+			
+				<td colspan="2">Extended Judge Demographics</td>
+				
+				<td class="rightalign">
+					<input type="radio" name="judge_demographics" value="1" <% ($circuit) ? ($circuit->setting("judge_demographics")) ? "checked" : "" : "" %> >
+					Yes
+			
+					<input type="radio" name="judge_demographics" value="" <% ($circuit) ? ($circuit->setting("judge_demographics")) ? "" : "checked" : "" %> >
+					No
+				</td>
+			</tr>
+			
+			<tr class="<% ($switch++ % 2) ? "oddrow" : "evenrow" %>">
+			
+				<td colspan="2">Judge Training Certification</td>
+				
+				<td class="rightalign">
+					<input type="radio" name="judge_training" value="1" <% ($circuit) ? ($circuit->setting("judge_training")) ? "checked" : "" : "" %> >
+					Yes
+			
+					<input type="radio" name="judge_training" value="" <% ($circuit) ? ($circuit->setting("judge_training")) ? "" : "checked" : "" %> >
+					No
+				</td>
+			</tr>
 			
 			<tr class="<% ($switch++ % 2) ? "oddrow" : "evenrow" %>">
 			
